# home_automation

./: .gitignore  .mdlrc  CHANGELOG.md  LICENSE  pyproject.toml
LED_Controller/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
LED_Controller/services/backend/: .gitignore  README.md  noxfile.py  pyproject.toml
LED_Controller/services/backend/sootworks/led_controller/: __init__.py  app.py  app_config.py  containers.py
LED_Controller/services/backend/sootworks/led_controller/controller/: __init__.py  _api_root_endpoint.py  _color_endpoints.py  _mappers.py  _power_endpoint.py  dto.py
LED_Controller/services/backend/sootworks/led_controller/domain/: entities.py  exception.py
LED_Controller/services/backend/sootworks/led_controller/domain/repository/: __init__.py  _power_relay_repository.py  _pwm_repository.py
LED_Controller/services/backend/sootworks/led_controller/infrastructure/: fast_api_utils.py  logging.py
LED_Controller/services/backend/sootworks/led_controller/repository/: __init__.py  _pca9685_pwm_repository.py  _raspbery_pi_4_power_relay_repository.py
LED_Controller/services/backend/sootworks/led_controller/service/: __init__.py  _animation.py  _led_controller_service.py  _serialization.py
LED_Controller/services/frontend/: index.html  package-lock.json  package.json
LED_Controller/services/frontend/src/: App.css  App.tsx  appConfig.ts
LED_Controller/services/frontend/src/actions/: saveState.ts  syncState.ts  togglePower.ts
LED_Controller/services/frontend/src/components/Button/: Button.module.css  Button.tsx
LED_Controller/services/frontend/src/components/Dashboard/: Dashboard.module.css  Dashboard.tsx
LED_Controller/services/frontend/src/components/Slider/: Slider.module.css  Slider.tsx
LED_Controller/services/frontend/src/types/: colorTypes.ts
LED_Controller/services/frontend/src/utils/: funcUtils.ts
scripts/ddns/: .env.example  ddns.py  pyproject.toml
