[tool.poetry]
name = "ddns"
version = "1.0.0"
description = "DDNS script: periodically update DNS records upon WAN IP change"
authors = ["Timon Tomas <ttimon7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
